--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Minha Lista de Tarefas</h1>
-    <input type="text" id="task-input" placeholder="Digite uma tarefa">
-    <button id="add-task-btn">Adicionar Tarefa</button>
-    <ul id="task-list">
+    <input type="text" id="tarefa_Input" placeholder="Digite uma tarefa">
+    <button id="add_Tarefa_Button" onclick="adicionar()">Adicionar Tarefa</button>
+    <ul id="task_list">
         <!-- Tarefas aparecerão aqui -->
     </ul>
 
